[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/components/day_night_cycle/DayNightCycle.gd" type="Script" id=1]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "sunrise"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.129412, 0.168627, 0.219608, 1 ), Color( 0.858824, 0.603922, 0.462745, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "sunset"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.298039, 0.388235, 0.498039, 1 ), Color( 0.207843, 0.258824, 0.32549, 1 ) ]
}

[node name="DayNightCycle" type="CanvasModulate"]
pause_mode = 1
script = ExtResource( 1 )

[node name="DayTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="NightTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/sunrise = SubResource( 3 )
anims/sunset = SubResource( 1 )

[connection signal="timeout" from="DayTimer" to="." method="_on_DayTimer_timeout"]
[connection signal="timeout" from="NightTimer" to="." method="_on_NightTimer_timeout"]
